# believing-machine

./: MANIFEST.in  README.md  pyproject.toml
src/believing_machine/: cli.py  config.py  machina.yaml
